--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="text" placeholder="00" id="mySeconds" disabled class="col-2 border-0 rounded-pill text-center mt-3 mb-5">
         <input type="text" placeholder="00" id="myMillisec" disabled class="col-2 border-0 rounded-pill text-center mt-3 mb-5"><br>
         <button onclick="myStopWatch()" class="btn rounded-pill text-white fw-bold btn-lg mb-3">START</button>
-        <button onclick="stopButton()" class="btn rounded-pill btn-lg mb-3 get">PAUSE</button>
+        <button onclick="pauseButton()" class="btn rounded-pill btn-lg mb-3 get">PAUSE</button>
         <button onclick="stopButton()" class="btn rounded-pill btn-lg mb-3 get">RESET</button>
     </div>
     <script src="script.js"></script>
